# ResumeForge

./: .env.example  .gitattributes  .gitignore  AUDIT.md  PLAN.md  README.md  app.py  app_output.txt  cover_letter.py  docker-compose.yml  github_parser.py  jd_parser.py  project_matcher.py  render.yaml  requirements.txt  resume_builder.py  resume_parser.py  scorer.py
.github/workflows/: ci.yml  deploy-hf-space.yml  keepalive.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  api.py  cover_letter.py  github_parser.py  jd_parser.py  pyproject.toml  requirements.txt  resume_builder.py  resume_parser.py  scorer.py
backend/app/: _legacy_api.py  config.py  db.py  deps.py  embeddings.py  logging.py  main.py  metrics.py  ratelimit.py  security.py  sse.py  store.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  groq_provider.py  openai_provider.py  registry.py
backend/app/routers/: analyse.py  cover_letter.py  files.py  generate.py  meta.py  projects.py
backend/app/services/: cover_letter.py  github_parser.py  jd_parser.py  pdf.py  project_matcher.py  rag.py  resume_builder.py  resume_parser.py  scorer.py
backend/tests/: test_api_smoke.py  test_audit_fixes.py  test_config.py  test_llm.py  test_logging.py  test_pdf.py  test_rag.py  test_security.py  test_skills.py  test_store.py
docs/adr/: 0001-spa-fastapi-split.md  0002-multi-provider-llm.md  (+4 more)
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pdf-service/: .dockerignore  Dockerfile  app.py
(+28 files in other folders)
